syntax = "proto3";

package records_v1;

import "google/protobuf/timestamp.proto";

option go_package = "pkg/records_v1;records_v1";

service RecordsV1 {
    rpc Get(GetRequest) returns (GetResponse);
    rpc List(ListRequest) returns (stream ListResponse);
}

message GetRequest {
    uint64 record_id = 1;
}

message GetResponse {
    Record record = 1;
}

message ListRequest {
    string login = 1;
    optional uint32 type = 2;
}

message ListResponse {
    Record record = 1;
}

message Record {
    uint64 id = 1;
    uint32 type = 2;
    string address = 3;
    repeated Credential credentials = 4;
    string comment = 5;
}

message Credential {
    string login = 1;
	string Password = 2;
	google.protobuf.Timestamp created_at = 3;
	string comment = 4;
}




